--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ set(COMPILE_ERPC_LIB ON)
 set(TRANSPORT "dpdk" CACHE STRING "Datapath transport (infiniband/raw/dpdk)")
 option(ROCE "Use RoCE if TRANSPORT is infiniband" OFF)
 option(SECURE "Use AES encryption (experimental/transport-agnostic)" OFF)
+option(SECURE_MT "Use multi-threaded AES encryption (experimental/transport-agnostic)" OFF)
 option(PERF "Compile for performance" OFF)
 set(PGO "none" CACHE STRING "Profile-guided optimization (generate/use/none)")
 set(LOG_LEVEL "warn" CACHE STRING "Logging level (none/error/warn/info/reorder/trace/cc)") 
@@ -112,6 +113,11 @@ if(SECURE)
   MESSAGE(STATUS "Encryption is enabled. This is an experimental feature and may break things.")
   add_definitions(-DSECURE=true)
   find_library(SSL_LIB ssl)
+
+  if(SECURE_MT)
+    MESSAGE(STATUS "Multi-threaded encryption is enabled. This is also an experimental feature and may break things.")
+    add_definitions(-DSECURE_MT=true)
+  endif(SECURE_MT)
 
   if(NOT SSL_LIB)
     message(FATAL_ERROR "openssl not found")
